[package]
name = "with-baby-messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-web-actors = "*"
actix="*"
serde= { version = "*", features=["derive"] }
serde_json = "*"
rusted_cypher = "*"
redis = "*"
anyhow = "*"
chrono = "*"
cassandra-cpp = "*"
r2d2 = "*"
dotenv = "*"
tokio = { version="*", features=["macros"]}